tests/baselines/reference/enumMemberResolution.errors.txt
==== tests/cases/compiler/enumMemberResolution.ts (2 errors) ====
    enum Position2 {
        IgnoreRulesSpecific = 0
    }
    var x = IgnoreRulesSpecific. // error
            ~~~~~~~~~~~~~~~~~~~
!!! error TS2304: Cannot find name 'IgnoreRulesSpecific'.
    var y = 1;
        ~
!!! error TS1005: ',' expected.
    var z = Position2.IgnoreRulesSpecific; // no error
    